// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Functions autocomplete autocomplete simple snapshot with =S 1`] = `
<div
  class="o-autocomplete-dropdown bg-white"
>
  <div
    class="d-flex flex-column text-start o-autocomplete-value-focus"
  >
    <div
      class="d-flex align-items-center gap-2"
    >
      <div>
        <svg
          class="o-icon fx-icon"
          viewBox="0 0 121.8 122.9"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m28 34-4 5v2h10l-6 40c-4 22-6 28-7 30-2 2-3 3-5 3-3 0-7-2-9-4H4c-2 2-4 4-4 7s4 6 8 6 9-2 15-8c8-7 13-17 18-39l7-35 13-1 3-6H49c4-23 7-27 11-27 2 0 5 2 8 6h4c1-1 4-4 4-7 0-2-3-6-9-6-5 0-13 4-20 10-6 7-9 14-11 24h-8zm41 16c4-5 7-7 8-7s2 1 5 9l3 12c-7 11-12 17-16 17l-3-1-2-1c-3 0-6 3-6 7s3 7 7 7c6 0 12-6 22-23l3 10c3 9 6 13 10 13 5 0 11-4 18-15l-3-4c-4 6-7 8-8 8-2 0-4-3-6-10l-5-15 8-10 6-4 3 1 3 2c2 0 6-3 6-7s-2-7-6-7c-6 0-11 5-21 20l-2-6c-3-9-5-14-9-14-5 0-12 6-18 15l3 3z"
            fill="currentColor"
          />
        </svg>
      </div>
      
      <div
        class="o-autocomplete-value text-truncate"
      >
        <span
          class="o-semi-bold"
          style="color:#9B359B; "
        >
          S
        </span>
        <span
          style=""
        >
          UM
        </span>
        
      </div>
    </div>
    <div
      class="o-autocomplete-description text-truncate"
    >
      do sum
    </div>
    
  </div>
  <div
    class="d-flex flex-column text-start"
  >
    <div
      class="d-flex align-items-center gap-2"
    >
      <div>
        <svg
          class="o-icon fx-icon"
          viewBox="0 0 121.8 122.9"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m28 34-4 5v2h10l-6 40c-4 22-6 28-7 30-2 2-3 3-5 3-3 0-7-2-9-4H4c-2 2-4 4-4 7s4 6 8 6 9-2 15-8c8-7 13-17 18-39l7-35 13-1 3-6H49c4-23 7-27 11-27 2 0 5 2 8 6h4c1-1 4-4 4-7 0-2-3-6-9-6-5 0-13 4-20 10-6 7-9 14-11 24h-8zm41 16c4-5 7-7 8-7s2 1 5 9l3 12c-7 11-12 17-16 17l-3-1-2-1c-3 0-6 3-6 7s3 7 7 7c6 0 12-6 22-23l3 10c3 9 6 13 10 13 5 0 11-4 18-15l-3-4c-4 6-7 8-8 8-2 0-4-3-6-10l-5-15 8-10 6-4 3 1 3 2c2 0 6-3 6-7s-2-7-6-7c-6 0-11 5-21 20l-2-6c-3-9-5-14-9-14-5 0-12 6-18 15l3 3z"
            fill="currentColor"
          />
        </svg>
      </div>
      
      <div
        class="o-autocomplete-value text-truncate"
      >
        <span
          class="o-semi-bold"
          style="color:#9B359B; "
        >
          S
        </span>
        <span
          style=""
        >
          ZZ
        </span>
        
      </div>
    </div>
    
  </div>
  
</div>
`;

exports[`composer Assistant render above the cell when not enough place below 1`] = `
<div
  class="o-composer-assistant overflow-auto"
  style="max-height:141px; width:300px; min-width:96px; "
>
  
  
  <div
    class="o-autocomplete-dropdown bg-white"
  >
    <div
      class="d-flex flex-column text-start o-autocomplete-value-focus"
    >
      <div
        class="d-flex align-items-center gap-2"
      >
        <div>
          <svg
            class="o-icon fx-icon"
            viewBox="0 0 121.8 122.9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m28 34-4 5v2h10l-6 40c-4 22-6 28-7 30-2 2-3 3-5 3-3 0-7-2-9-4H4c-2 2-4 4-4 7s4 6 8 6 9-2 15-8c8-7 13-17 18-39l7-35 13-1 3-6H49c4-23 7-27 11-27 2 0 5 2 8 6h4c1-1 4-4 4-7 0-2-3-6-9-6-5 0-13 4-20 10-6 7-9 14-11 24h-8zm41 16c4-5 7-7 8-7s2 1 5 9l3 12c-7 11-12 17-16 17l-3-1-2-1c-3 0-6 3-6 7s3 7 7 7c6 0 12-6 22-23l3 10c3 9 6 13 10 13 5 0 11-4 18-15l-3-4c-4 6-7 8-8 8-2 0-4-3-6-10l-5-15 8-10 6-4 3 1 3 2c2 0 6-3 6-7s-2-7-6-7c-6 0-11 5-21 20l-2-6c-3-9-5-14-9-14-5 0-12 6-18 15l3 3z"
              fill="currentColor"
            />
          </svg>
        </div>
        
        <div
          class="o-autocomplete-value text-truncate"
        >
          <span
            class="o-semi-bold"
            style="color:#9B359B; "
          >
            S
          </span>
          <span
            style=""
          >
            UM
          </span>
          
        </div>
      </div>
      <div
        class="o-autocomplete-description text-truncate"
      >
        do sum
      </div>
      
    </div>
    <div
      class="d-flex flex-column text-start"
    >
      <div
        class="d-flex align-items-center gap-2"
      >
        <div>
          <svg
            class="o-icon fx-icon"
            viewBox="0 0 121.8 122.9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m28 34-4 5v2h10l-6 40c-4 22-6 28-7 30-2 2-3 3-5 3-3 0-7-2-9-4H4c-2 2-4 4-4 7s4 6 8 6 9-2 15-8c8-7 13-17 18-39l7-35 13-1 3-6H49c4-23 7-27 11-27 2 0 5 2 8 6h4c1-1 4-4 4-7 0-2-3-6-9-6-5 0-13 4-20 10-6 7-9 14-11 24h-8zm41 16c4-5 7-7 8-7s2 1 5 9l3 12c-7 11-12 17-16 17l-3-1-2-1c-3 0-6 3-6 7s3 7 7 7c6 0 12-6 22-23l3 10c3 9 6 13 10 13 5 0 11-4 18-15l-3-4c-4 6-7 8-8 8-2 0-4-3-6-10l-5-15 8-10 6-4 3 1 3 2c2 0 6-3 6-7s-2-7-6-7c-6 0-11 5-21 20l-2-6c-3-9-5-14-9-14-5 0-12 6-18 15l3 3z"
              fill="currentColor"
            />
          </svg>
        </div>
        
        <div
          class="o-autocomplete-value text-truncate"
        >
          <span
            class="o-semi-bold"
            style="color:#9B359B; "
          >
            S
          </span>
          <span
            style=""
          >
            ZZ
          </span>
          
        </div>
      </div>
      
    </div>
    
  </div>
  
</div>
`;

exports[`composer Assistant render below the cell by default 1`] = `
<div
  class="o-composer-assistant overflow-auto"
  style="max-height:327px; width:300px; min-width:96px; "
>
  
  
  <div
    class="o-autocomplete-dropdown bg-white"
  >
    <div
      class="d-flex flex-column text-start o-autocomplete-value-focus"
    >
      <div
        class="d-flex align-items-center gap-2"
      >
        <div>
          <svg
            class="o-icon fx-icon"
            viewBox="0 0 121.8 122.9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m28 34-4 5v2h10l-6 40c-4 22-6 28-7 30-2 2-3 3-5 3-3 0-7-2-9-4H4c-2 2-4 4-4 7s4 6 8 6 9-2 15-8c8-7 13-17 18-39l7-35 13-1 3-6H49c4-23 7-27 11-27 2 0 5 2 8 6h4c1-1 4-4 4-7 0-2-3-6-9-6-5 0-13 4-20 10-6 7-9 14-11 24h-8zm41 16c4-5 7-7 8-7s2 1 5 9l3 12c-7 11-12 17-16 17l-3-1-2-1c-3 0-6 3-6 7s3 7 7 7c6 0 12-6 22-23l3 10c3 9 6 13 10 13 5 0 11-4 18-15l-3-4c-4 6-7 8-8 8-2 0-4-3-6-10l-5-15 8-10 6-4 3 1 3 2c2 0 6-3 6-7s-2-7-6-7c-6 0-11 5-21 20l-2-6c-3-9-5-14-9-14-5 0-12 6-18 15l3 3z"
              fill="currentColor"
            />
          </svg>
        </div>
        
        <div
          class="o-autocomplete-value text-truncate"
        >
          <span
            class="o-semi-bold"
            style="color:#9B359B; "
          >
            S
          </span>
          <span
            style=""
          >
            UM
          </span>
          
        </div>
      </div>
      <div
        class="o-autocomplete-description text-truncate"
      >
        do sum
      </div>
      
    </div>
    <div
      class="d-flex flex-column text-start"
    >
      <div
        class="d-flex align-items-center gap-2"
      >
        <div>
          <svg
            class="o-icon fx-icon"
            viewBox="0 0 121.8 122.9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m28 34-4 5v2h10l-6 40c-4 22-6 28-7 30-2 2-3 3-5 3-3 0-7-2-9-4H4c-2 2-4 4-4 7s4 6 8 6 9-2 15-8c8-7 13-17 18-39l7-35 13-1 3-6H49c4-23 7-27 11-27 2 0 5 2 8 6h4c1-1 4-4 4-7 0-2-3-6-9-6-5 0-13 4-20 10-6 7-9 14-11 24h-8zm41 16c4-5 7-7 8-7s2 1 5 9l3 12c-7 11-12 17-16 17l-3-1-2-1c-3 0-6 3-6 7s3 7 7 7c6 0 12-6 22-23l3 10c3 9 6 13 10 13 5 0 11-4 18-15l-3-4c-4 6-7 8-8 8-2 0-4-3-6-10l-5-15 8-10 6-4 3 1 3 2c2 0 6-3 6-7s-2-7-6-7c-6 0-11 5-21 20l-2-6c-3-9-5-14-9-14-5 0-12 6-18 15l3 3z"
              fill="currentColor"
            />
          </svg>
        </div>
        
        <div
          class="o-autocomplete-value text-truncate"
        >
          <span
            class="o-semi-bold"
            style="color:#9B359B; "
          >
            S
          </span>
          <span
            style=""
          >
            ZZ
          </span>
          
        </div>
      </div>
      
    </div>
    
  </div>
  
</div>
`;
